--- a/web/src/app/web/web-sys/user-path/user-path.component.html
+++ b/web/src/app/web/web-sys/user-path/user-path.component.html
@@ -11,13 +11,14 @@
         </ng-template>
         <nz-spin [nzSpinning]="isSpinning.spin1">
             <div (click)="selectUserPathListItem(item)" class="custom-default-list" [ngClass]="{'selected': item.select}" *ngFor="let item of
-        userPathListData">
+        userPathListData?.data">
                 <span title="{{item.geo}}" class="left" style="width:200px;">{{item.onlineip}}({{item.mostSpecificSubdivision_nameCN}})</span>
                 <span class="right">
           <span>总路径：{{item.count}}</span>
                 <i class="anticon anticon-right"></i>
                 </span>
             </div>
+            <div (click)="loadMore()" *ngIf="userPathListData?.data.length<userPathListData?.total" style="text-align:center;padding:4px;cursor: pointer;">加载更多</div>
         </nz-spin>
 
     </div>
