--- a/web/src/app/web/web-sys/visit-details/visit-details.component.html
+++ b/web/src/app/web/web-sys/visit-details/visit-details.component.html
@@ -66,7 +66,10 @@
                 <td>{{data.bs}}</td>
                 <td>{{data.os}}</td>
                 <td>{{data.ua}}</td>
-                <td>{{data.mostSpecificSubdivision_nameCN}}</td>
+                <td>
+                    {{data.mostSpecificSubdivision_nameCN}} <br/>
+                    {{data.onlineip}}
+                </td>
 
                 <td *ngIf="searchModel.type=='api'">{{data.api}}</td>
                 <td *ngIf="searchModel.type=='api'">
