--- a/web/src/app/homepage/home-page/homepage.component.html
+++ b/web/src/app/homepage/home-page/homepage.component.html
@@ -39,6 +39,10 @@
         </nz-card-meta>
     </nz-card>
     <nz-card style="width: 300px;display: inline-block;vertical-align: top;margin: 16px;">
+        <nz-card-meta [nzAvatar]="avatarTemplate" nzTitle="IP转换工具" nzDescription="可以快速，准确，可靠的将IP转换成位置的工具，并对外提供接口。">
+        </nz-card-meta>
+    </nz-card>
+    <nz-card style="width: 300px;display: inline-block;vertical-align: top;margin: 16px;">
         <nz-card-meta [nzAvatar]="avatarTemplate" nzTitle="……" nzDescription="More">
         </nz-card-meta>
     </nz-card>
@@ -128,6 +132,9 @@
                 <li><a appMonitorABlank target="_blank" href="http://coolwow.myselfbuy.com/"
                         title="一款帮你选择贷款方式的多功能利息计算工具">酷娃利息对比计算工具</a>
                 </li>
+                <li><a appMonitorABlank target="_blank" href="http://hubing.online:8086"
+                    title="一款开源将IP转换成位置的工具，对外提供接口">在线IP转换工具</a>
+            </li>
             </ul>
         </div>
     </div>
