--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -17,10 +17,10 @@
     </nz-header>
 </nz-layout>
 <app-advise-bar [data]="dataItems1"
-    [setting]="{width:300,left:'19%',top:'2px',title:'独立账户',subTitle:'关注公众号，发送“邮箱+密码”，免费注册。',color:'linear-gradient(0deg, rgb(230, 125, 16,0.7), rgb(244, 69, 61), rgba(255, 177, 81, 0.86))'}">
+    [setting]="{width:300,left:'19%',top:'2px',title:'独立账户',subTitle:'关注公众号，发送“邮箱+密码”,免费注册。',color:'linear-gradient(0deg, rgb(230, 125, 16,0.7), rgb(244, 69, 61), rgba(255, 177, 81, 0.86))'}">
 </app-advise-bar>
 <app-advise-bar [data]="dataItems1"
-    [setting]="{width:300,left:'14%',top:'2px',title:'私有部署',subTitle:'关注公众号,发送“私有部署”。',color:'linear-gradient(0deg, rgba(24, 144, 255, 0.7), rgb(244, 61, 196), rgba(255, 177, 81, 0.86))'}">
+    [setting]="{width:300,left:'14%',top:'2px',title:'私有部署',subTitle:'关注公众号,发送“私有部署”,服务费(2k)。',color:'linear-gradient(0deg, rgba(24, 144, 255, 0.7), rgb(244, 61, 196), rgba(255, 177, 81, 0.86))'}">
 </app-advise-bar>
 <!-- <app-advise-bar [data]="dataItems" [setting]="{left:'14%',top:'2px',title:'提升技能',subTitle:'慕课网课程：',color:'linear-gradient(0deg, rgba(54, 137, 231, 0.7), rgba(61, 147, 244, 1), rgba(81, 163, 255, 1))'}"></app-advise-bar>  -->
 <div class="layout">
