--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -21,6 +21,7 @@
 .ant-btn,
 input,
 .ant-modal-content,
+.ant-input-number,
 .ant-radio-button-wrapper:first-child,
 .ant-radio-button-wrapper:last-child {
     border-radius: 0 !important;
