--- a/web/src/app/web/web-sys/sys-setting/sys-setting.component.html
+++ b/web/src/app/web/web-sys/sys-setting/sys-setting.component.html
@@ -22,32 +22,51 @@
       [ngModel]="currentSite.disableResource">勾选此项，开启页面请求资源上报。</label>
   </div>
   <nz-divider></nz-divider>
-  <h3>报警设置</h3>
-  <p>注意：当统计值大于设置的值后，系统会触发警报。</p>
-  <div class="setting-gutter">
-    站点ID:
-    <label>{{currentSite.appKey}}</label>
-  </div>
-  <div class="setting-gutter">
-    <p> JS错误率报警: &nbsp;<nz-switch  style="vertical-align: bottom;" [(ngModel)]="jsErrorAlarm.alarmState" nzCheckedChildren="开" nzUnCheckedChildren="关"></nz-switch>
-    </p> 
-    <div>
-      最近分钟：N=<input style="width:100px;" [disabled]="!jsErrorAlarm.alarmState" [(ngModel)]="jsErrorAlarm.alarmTimes" nz-input placeholder="单位：分钟">，错误率大于 <nz-input-number [disabled]="!jsErrorAlarm.alarmState" [(ngModel)]="jsErrorAlarm.alarmLimit" [nzMin]="0" style="width:80px;" placeholder="阈值"></nz-input-number>%，触发JS错误报警。接收人：<input style="width:200px;" [disabled]="!jsErrorAlarm.alarmState" [(ngModel)]="jsErrorAlarm.email" nz-input placeholder="邮箱"><a (click)="jsErrorUpdate()">更新配置</a>
+  <div *ngIf="showAlarmArea">
+    <h3>报警设置</h3>
+    <p>注意：修改报警配置后，需要点击保存配置才会生效。</p>
+    <div class="setting-gutter">
+      站点ID:
+      <label>{{currentSite.appKey}}</label>
     </div>
-  </div>
-  <div class="setting-gutter">
-    <p>API错误率报警: &nbsp;<nz-switch style="vertical-align: bottom;" [(ngModel)]="apiErrorAlarm.alarmState" nzCheckedChildren="开" nzUnCheckedChildren="关"></nz-switch>
+    <div class="setting-gutter">
+      <p> JS错误率报警: &nbsp;<nz-switch style="vertical-align: bottom;" [(ngModel)]="jsErrorAlarm.alarmState"
+          nzCheckedChildren="开" nzUnCheckedChildren="关"></nz-switch>
+      </p>
       <div>
-        最近分钟：N=<input style="width:100px;" [disabled]="!apiErrorAlarm.alarmState" [(ngModel)]="apiErrorAlarm.alarmTimes" nz-input placeholder="单位：分钟">，错误率大于 <nz-input-number [nzMin]="0" style="width:80px;" [disabled]="!apiErrorAlarm.alarmState" [(ngModel)]="apiErrorAlarm.alarmLimit" placeholder="阈值"></nz-input-number>%，触发API错误报警。接收人：<input style="width:200px;" [disabled]="!apiErrorAlarm.alarmState" [(ngModel)]="apiErrorAlarm.email" nz-input placeholder="邮箱"><a (click)="apiErrorUpdate()">更新配置</a>
+        最近分钟：N=<input style="width:100px;" [disabled]="!jsErrorAlarm.alarmState" [(ngModel)]="jsErrorAlarm.alarmTimes"
+          nz-input placeholder="单位：分钟">，错误率大于 <nz-input-number [disabled]="!jsErrorAlarm.alarmState"
+          [(ngModel)]="jsErrorAlarm.alarmLimit" [nzMin]="0" style="width:80px;" placeholder="阈值"></nz-input-number>
+        %，触发JS错误报警。接收人：<input style="width:200px;" [disabled]="!jsErrorAlarm.alarmState"
+          [(ngModel)]="jsErrorAlarm.email" nz-input placeholder="邮箱"><a (click)="jsErrorUpdate()"> 保存配置</a>
       </div>
+    </div>
+    <div class="setting-gutter">
+      <p>API错误率报警: &nbsp;<nz-switch style="vertical-align: bottom;" [(ngModel)]="apiErrorAlarm.alarmState"
+          nzCheckedChildren="开" nzUnCheckedChildren="关"></nz-switch>
+        <div>
+          最近分钟：N=<input style="width:100px;" [disabled]="!apiErrorAlarm.alarmState"
+            [(ngModel)]="apiErrorAlarm.alarmTimes" nz-input placeholder="单位：分钟">，错误率大于 <nz-input-number [nzMin]="0"
+            style="width:80px;" [disabled]="!apiErrorAlarm.alarmState" [(ngModel)]="apiErrorAlarm.alarmLimit"
+            placeholder="阈值"></nz-input-number>%，触发API错误报警。接收人：<input style="width:200px;"
+            [disabled]="!apiErrorAlarm.alarmState" [(ngModel)]="apiErrorAlarm.email" nz-input placeholder="邮箱"><a
+            (click)="apiErrorUpdate()"> 保存配置</a>
+        </div>
+    </div>
+    <div class="setting-gutter">
+      <p>Perf访问速度报警: &nbsp;<nz-switch style="vertical-align: bottom;" [(ngModel)]="perfSpeedAlarm.alarmState"
+          nzCheckedChildren="开" nzUnCheckedChildren="关"></nz-switch>
+        <div>
+          最近分钟：N=<input style="width:100px;" [disabled]="!perfSpeedAlarm.alarmState"
+            [(ngModel)]="perfSpeedAlarm.alarmTimes" nz-input placeholder="单位：分钟">，Perf访问速度大于 <nz-input-number
+            [nzMin]="0" style="width:80px;" [disabled]="!perfSpeedAlarm.alarmState"
+            [(ngModel)]="perfSpeedAlarm.alarmLimit" placeholder="阈值"></nz-input-number>ms,触发访问速度报警。接收人：<input
+            style="width:200px;" [disabled]="!perfSpeedAlarm.alarmState" [(ngModel)]="perfSpeedAlarm.email" nz-input
+            placeholder="邮箱"><a (click)="perfSpeedUpdate()"> 保存配置</a>
+        </div>
+    </div>
+    <nz-divider></nz-divider>
   </div>
-  <div class="setting-gutter">
-    <p>Perf访问速度报警: &nbsp;<nz-switch style="vertical-align: bottom;" [(ngModel)]="perfSpeedAlarm.alarmState" nzCheckedChildren="开" nzUnCheckedChildren="关"></nz-switch>
-      <div>
-        最近分钟：N=<input style="width:100px;" [disabled]="!perfSpeedAlarm.alarmState" [(ngModel)]="perfSpeedAlarm.alarmTimes" nz-input placeholder="单位：分钟">，Perf访问速度大于 <nz-input-number [nzMin]="0" style="width:80px;" [disabled]="!perfSpeedAlarm.alarmState" [(ngModel)]="perfSpeedAlarm.alarmTimes" placeholder="阈值"></nz-input-number>ms,触发访问速度报警。接收人：<input style="width:200px;" [disabled]="!perfSpeedAlarm.alarmState" [(ngModel)]="perfSpeedAlarm.email" nz-input placeholder="邮箱"><a (click)="perfSpeedUpdate()">更新配置</a>
-      </div>
-  </div>
-  <nz-divider></nz-divider>
   <h3>复制/粘贴BI探针</h3>
   <p>复制下方的代码，将其粘贴在页面HTML的body中。</p>
   <p style="margin-bottom: 4px;">注意1：需要将代码粘贴在body内容的第一行。</p>
