--- a/web/src/app/homepage/home-page/homepage.component.html
+++ b/web/src/app/homepage/home-page/homepage.component.html
@@ -93,13 +93,13 @@
     </ul>
 </section>
 
-<section class="section-contanier" style="height: 600px;width:100%;">
+<section class="section-contanier" style="height: 500px;width:100%;">
     <div class="section-overlay" style="opacity: 0.7;background-color: rgba(34, 34, 34, 0.54);"></div>
     <div class="section-block" style="background: repeat rgb(34,34,34) 50% 50% /
       cover fixed;background-image: url('../../../assets/images/home.jpg');">
       <div style="color: #fff;position: relative;padding-top:
         4%;">
-        <p style="font-size: 30px;text-align: center;">万元开源计划</p>
+        <p style="font-size: 30px;text-align: center;">开源支持</p>
         <pre style="font-size: 16px;font-family: cursive;">
         背景：
         项目创建至今，收到很多用户反馈。
@@ -111,20 +111,14 @@
         每一个做开源项目的个人或团队，都深知开源项目的不易。
         我们会花费无数个日日夜夜，想办法做出更好的产品。
         时间、资金、团队都是我们所需要的。
+        可以通过下面支付宝、微信途径提供支持。
+        再次感谢您们的支持。
         </pre>
-        <pre style="font-size: 16px;font-family: cursive;">
-        想法：
-        我们不想将一个开源产品最后成为一个收费授权产品。
-        我们想将产品完全开源（目前探针部分未开源），由市场去定夺他的价值。
-        因此，提出一个“万元开源计划”。
-        通过下面支付宝、微信途径提供支持。
-        当达成我们的万元目标之后，项目将完全开源。
-        </pre> 
-        <div style="position: absolute;top: 40%;right: 5%;background: rgba(255, 255, 255, 0.46);
+        <!-- <div style="position: absolute;top: 40%;right: 5%;background: rgba(255, 255, 255, 0.46);
         padding: 20px;
         border-radius: 40px;">
             <nz-progress [nzPercent]="1" nzType="circle" [nzFormat]="formatOne"></nz-progress>
-        </div>
+        </div> -->
       </div>
     </div> 
   </section>
