--- a/web/src/app/homepage/home-page/homepage.component.html
+++ b/web/src/app/homepage/home-page/homepage.component.html
@@ -18,6 +18,7 @@
         </div>
     </div>
 </section>
+
 <section id="home-section2" style="width:100%;">
     <h4>谁在使用</h4>
     <nz-card style="width: 300px;display: inline-block;vertical-align: top;margin: 16px;">
@@ -63,6 +64,7 @@
         </nz-card-meta>
     </nz-card>
 </section>
+
 <section id="home-section2" style="width:100%;padding:50px;">
     <h3 style="margin-left: 16px;">帮助文档(官方)</h3>
     <ul style="margin-top: 16px;font-size: 16px;line-height: 28px;">
@@ -93,20 +95,20 @@
     </ul>
 </section>
 
-<section class="section-contanier" style="height: 500px;width:100%;">
+<section class="section-contanier" style="height: 700px;width:100%;">
     <div class="section-overlay" style="opacity: 0.7;background-color: rgba(34, 34, 34, 0.54);"></div>
     <div class="section-block" style="background: repeat rgb(34,34,34) 50% 50% /
       cover fixed;background-image: url('../../../assets/images/home.jpg');">
-      <div style="color: #fff;position: relative;padding-top:
+        <div style="color: #fff;position: relative;padding-top:
         4%;">
-        <p style="font-size: 30px;text-align: center;">开源支持</p>
-        <pre style="font-size: 16px;font-family: cursive;">
+            <p style="font-size: 30px;text-align: center;">开源支持</p>
+            <pre style="font-size: 16px;font-family: cursive;">
         背景：
         项目创建至今，收到很多用户反馈。
         在此，感谢关注、支持和使用“前端监控系统”的各位朋友们。
         在你们的支持下，我们将继续砥砺前行，做更好的产品回馈你们。
         </pre>
-        <pre style="font-size: 16px;font-family: cursive;">
+            <pre style="font-size: 16px;font-family: cursive;">
         困境：
         每一个做开源项目的个人或团队，都深知开源项目的不易。
         我们会花费无数个日日夜夜，想办法做出更好的产品。
@@ -114,21 +116,43 @@
         可以通过下面支付宝、微信途径提供支持。
         再次感谢您们的支持。
         </pre>
-        <!-- <div style="position: absolute;top: 40%;right: 5%;background: rgba(255, 255, 255, 0.46);
-        padding: 20px;
-        border-radius: 40px;">
-            <nz-progress [nzPercent]="1" nzType="circle" [nzFormat]="formatOne"></nz-progress>
-        </div> -->
-      </div>
-    </div> 
-  </section>
+            <h3 style="margin-left: 64px;color:#fff;">支持作者(赏咖啡)</h3>
+            <img nz-tooltip nzTitle="关注公众号" style="width: 175px;margin: 8px 64px;"
+                src="/assets/images/weixin-gongzhonghao.jpg" alt="公众号">
+            <img nz-tooltip nzTitle="支付宝赞赏" style="width: 175px;margin: 8px 24px;" src="/assets/images/zhifubao.png"
+                alt="支付宝">
+            <img nz-tooltip nzTitle="微信赞赏" style="width: 175px;margin: 8px 24px;" src="/assets/images/weixin.png"
+                alt="微信">
+        </div>
 
-<section id="home-section2" style="width:100%;padding:25px 50px;">
-    <h3 style="margin-left: 16px;">支持作者(赏咖啡)</h3>
-    <img nz-tooltip nzTitle="关注公众号" style="width: 200px;margin: 8px 24px;" src="/assets/images/weixin-gongzhonghao.jpg" alt="公众号">
-    <img nz-tooltip nzTitle="支付宝赞赏" style="width: 175px;margin: 8px 24px;" src="/assets/images/zhifubao.png" alt="支付宝">
-    <img nz-tooltip nzTitle="微信赞赏" style="width: 175px;margin: 8px 24px;" src="/assets/images/weixin.png" alt="微信">
+    </div>
 </section>
+
+<section id="home-section2" style="width:100%;background: rgba(204, 204, 204, 0.28);">
+    <h4>业务范围</h4>
+    <nz-card style="width: 300px;display: inline-block;vertical-align: top;margin: 16px;">
+        <nz-card-meta [nzAvatar]="avatarTemplate" nzTitle="前端监控平台个性化定制"
+            nzDescription="根据用户要求定制开发前端监控系统，个性化设置图表分析，数据展示，助你及时解决线上问题。">
+        </nz-card-meta>
+    </nz-card>
+    <nz-card style="width: 300px;display: inline-block;vertical-align: top;margin: 16px;">
+        <nz-card-meta [nzAvatar]="avatarTemplate" nzTitle="个人/企业网站开发" nzDescription="专注各类软件开发，打造安全优质的网络平台，价格实惠，低于同类竞品。">
+        </nz-card-meta>
+    </nz-card>
+    <nz-card style="width: 300px;display: inline-block;vertical-align: top;margin: 16px;">
+        <nz-card-meta [nzAvatar]="avatarTemplate" nzTitle="小程序开发" nzDescription="引流新渠道，无需下载，扫码即可使用。">
+        </nz-card-meta>
+    </nz-card>
+    <nz-card style="width: 300px;display: inline-block;vertical-align: top;margin: 16px;">
+        <nz-card-meta [nzAvatar]="avatarTemplate" nzTitle="前/后端/架构咨询服务" nzDescription="专注解决开发、线上过程中的各种疑难问题，服务费用低至10元。">
+        </nz-card-meta>
+    </nz-card>
+    <nz-card style="width: 300px;display: inline-block;vertical-align: top;margin: 16px;">
+        <nz-card-meta [nzAvatar]="avatarTemplate" nzTitle="联系方式" nzDescription="微信/QQ:676022504">
+        </nz-card-meta>
+    </nz-card>
+</section>
+
 <section id="footer" style="width:100%;">
     <div class="grid-fluid">
         <div class="grid">
@@ -163,8 +187,8 @@
                         title="一款帮你选择贷款方式的多功能利息计算工具">酷娃利息对比计算工具</a>
                 </li>
                 <li><a appMonitorABlank target="_blank" href="http://hubing.online:8086"
-                    title="一款开源将IP转换成位置的工具，对外提供接口">在线IP转换工具</a>
-            </li>
+                        title="一款开源将IP转换成位置的工具，对外提供接口">在线IP转换工具</a>
+                </li>
             </ul>
         </div>
     </div>
