--- a/web/src/app/homepage/home-page/homepage.component.html
+++ b/web/src/app/homepage/home-page/homepage.component.html
@@ -192,6 +192,9 @@
             </ul>
         </div>
     </div>
+    <div style="color:gray;text-align: center;background: #001529;padding: 24px;">
+        <a href="http://www.beian.miit.gov.cn" target="_blank">备案号：蜀ICP备20008065号-1</a>
+    </div>
 </section>
 
 <nz-back-top [nzTemplate]="tpl" [nzVisibilityHeight]="100">
