--- a/web/src/app/web/web-sys/sys-setting/sys-setting.component.html
+++ b/web/src/app/web/web-sys/sys-setting/sys-setting.component.html
@@ -69,9 +69,7 @@
   </div>
   <h3>复制/粘贴BI探针</h3>
   <p>复制下方的代码，将其粘贴在页面HTML的body中。</p>
-  <p style="margin-bottom: 4px;">注意1：需要将代码粘贴在body内容的第一行。</p>
-  <p>注意2：如果站点是https协议，请下载此<a href="http://hubing.online:8082/bundle.js"
-      target="_blank">bundle.js</a>，部署到您的https站点，并使用服务器路径替换当前探针文件路径，如需帮助请联系作者。</p>
+  <p style="margin-bottom: 4px;">注意1：需要将代码粘贴在body内容的第一行，如需帮助请联系作者。</p>
   <div class="setting-code">
     <code>
       {{setting.code}}
