--- a/web/src/app/homepage/home-page/homepage.component.scss
+++ b/web/src/app/homepage/home-page/homepage.component.scss
@@ -131,3 +131,12 @@
     }
   }
 }
+
+[nz-carousel-content] {
+  text-align: center;
+  height: 300px;
+  // line-height: 160px;
+  // background: #364d79;
+  color: #fff;
+  overflow: hidden;
+}
