--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -117,7 +117,7 @@ input,
     word-break: break-all;
 }
 
-.ant-menu-dark, .ant-menu-dark .ant-menu-sub {
+.ant-layout-header,.ant-menu-dark, .ant-menu-dark .ant-menu-sub {
     color: rgba(255, 255, 255, 0.65);
     background: #096dd9 !important;
 }
