--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -130,3 +130,16 @@ input,
 .CodeMirror{
     height: 220px;
 }
+
+.custom-card{
+    display: inline-block !important;
+    vertical-align: top;
+    margin: 16px !important;
+    box-shadow: 0 0 20px 0 #ddd;
+    transition: all .3s;
+    transform: translateY(0);
+    &:hover{
+        box-shadow: 0 10px 10px #aaa;
+        transform: translateY(-8px);
+    }
+}
