--- a/web/src/app/homepage/home-page/homepage.component.scss
+++ b/web/src/app/homepage/home-page/homepage.component.scss
@@ -2,13 +2,11 @@
   margin-top: 50px;
   height: 400px;
   position: relative;
-  // background: url('../../../assets/images/home.jpg') no-repeat;
   background-position: center;
   background-size: cover;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
 
-  // box-shadow: 1px 1px 10px grey;
   #deccription {
     position: absolute;
     top: 30%;
@@ -18,7 +16,6 @@
     height: 500px;
     margin: -250px 10% auto;
     border-radius: 20px;
-    // box-shadow: 1px 1px 40px #1890ff;
     padding: 8px;
     padding-top: 160px;
 
@@ -61,15 +58,15 @@
 
   h4 {
     text-align: center;
-    font-size: 40px;
+    font-size: 32px;
     font-weight: 600;
     color: #333;
+    letter-spacing: 1px;
   }
 }
 
 #footer {
   height: 200px;
-  // background: #3D3E49;
   background: #001529;
   color: #eee;
 
@@ -135,8 +132,6 @@
 [nz-carousel-content] {
   text-align: center;
   height: 300px;
-  // line-height: 160px;
-  // background: #364d79;
   color: #fff;
   overflow: hidden;
 }
